--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,33 +1,44 @@
 /* demo styles
 --------------------------------------------- */
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body, html {
   overflow: hidden;
 }
 
-body {
-  font: 100% / 1.5 Arial;
+// body {
+//   // font: 100% / 1.5 Arial;
+// }
+
+.clearfix:before,
+.clearfix:after {
+  content: " "; /* 1 */
+  display: table; /* 2 */
 }
 
-* {
-  margin:0;
-  padding:0;
+.clearfix:after {
+  clear: both;
 }
 
 .parallax {
-font-size: 200%;
+  // font-size: 200%;
 }
 
-h1,
-h2,
-h3,
-h4 {
-  font-family: 'Leckerli One', cursive;
-  font-weight: lighter;
+h1 {
+  font-family: 'Homemade Apple', cursive;
+  // font-weight: lighter;
+  font-size: 3em;
 }
 
 p {
   font-family: 'Quattrocento Sans', sans-serif;
+  font-size: 200%;
 }
 
 /* Parallax base styles
@@ -97,13 +108,32 @@ z-index: 5;
 // }
 
 .stuff,
-.title {
+.title,
+.small {
   text-align: center;
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+.small {
+  font-size: 70%;
+  top: 95%;
+}
+
+.stack {
+  text-align: left;
+  position: absolute;
+  max-width: 500px;
+  left: 10%;
+  top: 30%
+}
+
+.small {
+  font-size: 100%;
+  top: 95%;
 }
 
 .ideaimg {
@@ -117,6 +147,25 @@ z-index: 5;
   transform: translate(-50%, -50%);
 }
 
+.lastfig {
+  position: absolute;
+  // float: right;
+  left: 50%;
+  top: 15%;
+    img {
+      max-width: 650px;
+    }
+}
+
+.winner {
+  position: absolute; 
+  left: 33%;
+  top: 30%;
+  // float: right;
+    img {
+      max-width: 250px;
+    }
+}
 
 /* style the groups
 --------------------------------------------- */
@@ -241,24 +290,38 @@ z-index: 3; /* slide under group 5 and 7 */
 
 /*pick the winners*/
 #group9 {
-z-index: 3; /* slide over group 6 and 8 */
+  z-index: 3; /* slide over group 6 and 8 */
 }
 #group9 .parallax__layer--base {
-background: $base-bkg;
+  background: transparent url(..//img/clarity.png) 0 0 no-repeat;
+  background-size: cover;
+}
+#group9 .parallax__layer--fore {
+  z-index: 6;
+  color: $cream;
 }
 
 /*the winning idea makes it big*/
 #group10 {
-z-index: 2; /* slide under group 7 */
+  z-index: 2; /* slide under group 7 */
 }
 #group10 .parallax__layer--back {
-background: rgb(102,204,102);
+  background: $dark-blue;
+  color: $cream;
+    img {
+      // max-width: 500px;
+      // text-align: right;
+      // position: absolute;
+      // right: 10%;
+      // top: 50%;
+        }
 }
 
-/*REMOVE AND MOVE CONTENT TO GR10!!!! keep at it - it's a muscle*/
+/*keep at it - it's a muscle*/
 #group11 {
-z-index: 3; /* slide over group 8 */
+  z-index: 3; /* slide over group 8 */
 }
 #group11 .parallax__layer--base {
-background: $base-bkg;
+  background: $light-blue;
+  color: $main-plum;
 }
